# decadecraft

./: CMakeLists.txt
cmake/: CompilerOptions.cmake  GLAD.cmake  GLFW.cmake  GLM.cmake  PCH.cmake
src/: main.cpp
src/debug/: opengl.h  tracing.h
src/engine/: Engine.cpp  Engine.h
src/rendering/glfw/: GLFWContext.cpp  GLFWContext.h  Window.cpp  Window.h
src/rendering/opengl/: VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
src/rendering/opengl/renderers/: square.cpp  square.h
src/rendering/opengl/wrappers/: IndexBuffer.cpp  IndexBuffer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
